feat: article / note / user params validator
